
== Changelog ==

= Animation Addons for Elementor v2.3.2 – 25 may 2025 =
  - 🆕 **Added:** x time in meta widget
  - 🆕 **Added:** dependancy loaded in elementor widget for on demand asset load
  - 🎨 **Updated:** Dashboard Settings for Youtube , Weather, Tiktok
  - 🎨 **Updated:** Added ajax functionality in Search widget.

= Animation Addons for Elementor v2.3.1 – 15 may 2025 =
  - 🆕 **Added:** 5 animated business templates
  - 🆕 **Added:** optin popup
  - 🎨 **Fixed:** animation library dependancy

 = v2.2 – 06 may 2025 =
  - ❌ **Removed:** Draggable js
  - 🎨 **Fixed:** user data security issue
  - 🆕 **Added:** Added 5 website templates

 = v2.1.9 – 05 may 2025 =
  - 🆕 **Added:** Added notice for pro element
  - 🆕 **Added:** Responsive control to hide onepage nav title
 
 = v2.1.8 – 22 April 2025 =
  - 🆕 **Added:** Scroll Smother option
  - 🎨 **Fixed:** Table of content icon in dashboard
  - 🆕 **Added:** One Page Nav svg size 

 = v2.1.7 – 16 April 2025 =
  - 🎨 **Fixed:** Text Domain Translation Issue
  - 🎨 **Fixed:** Fix  Pre Built Template Dashboard

 = v2.1.5 – 08 April 2025 =
  - 🎨 **Fixed:** Pre Built Template SSL issue 
  - 🎨 **Fixed:** Fix Toast Color Issue
  - ✅ **Compatibility:** Optimized Markup compatibility with **Elementor core** for Animation.

 = v2.1.4 – 06 April 2025 =
  - 🎨 **Fixed:** Slider animation issue
  - 🎨 **Fixed:** Gallery Issue

 = v2.1.2 – 25 March 2025 =
  - 🔄 **Updated:** Banner and dashboard updated
  - 🔄 **Updated:** Live Copy Support current container index

= v2.1.1 – 20 March 2025 =
  - 🔄 **Updated:** intro video and price tab
  - 🔄 **Updated:** Update template Library vps path

 = v2.0 – 13 March 2025 =
  - ❌ **Removed:** GoodShare Library from social share widget
  - 🔄 **Updated:** Updated Dashboard UI
  - 🆕 **New Feature:** Added **Template Library**
  - 🆕 **New Feature:** Added **Live Copy Paste**
  - 🆕 **New Feature:** Added **Dynamic Tags**

 = v1.1.9 – 20 February 2025 =